<resources>
    <string name="app_name">Food Runner</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="don_t_have_an_account_register"><u>Don't have an account? Register</u></string>
    <string name="preference_file_name">food_runner_cache</string>
    <string name="login">Login</string>
    <string name="register_yourself">Register Yourself</string>
    <string name="name_input">Enter Name</string>
    <string name="e_mail_address_input">Enter E-Mail Address</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_password_again">Enter Password Again</string>
    <string name="register">Register</string>
    <string name="forgot_pwd_txt">Enter your registered mobile number and email below: \n</string>
    <string name="next_fpwd">Next</string>
</resources>