<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/food_runner_background_color"
    tools:context=".ForgotPwd">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgLogopwd"
        android:layout_width="@dimen/logo_width"
        android:layout_height="@dimen/logo_height"
        android:layout_centerHorizontal="true"
        android:src="@drawable/food_runner_logo" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtFpwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgLogopwd"
        android:layout_marginHorizontal="10dp"
        android:text="@string/forgot_pwd_txt"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etEmailpwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_activity_edittext_height"
        android:layout_below="@id/etMobNumfpwd"
        android:layout_marginHorizontal="@dimen/register_activity_edittext_marginhorizontal"
        android:layout_marginTop="@dimen/register_activity_edittext_margintop"
        android:background="@drawable/rounded_edittext_bg"
        android:drawableStart="@drawable/mail_icon"
        android:drawablePadding="@dimen/register_activity_drawable_padding"
        android:hint="@string/e_mail_address_input"
        android:inputType="textEmailAddress"
        android:padding="@dimen/register_activity_edittext_padding"
        android:textColor="@color/black" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etMobNumfpwd"
        android:layout_width="match_parent"
        android:layout_height="@dimen/register_activity_edittext_height"
        android:layout_below="@id/txtFpwd"
        android:layout_marginHorizontal="@dimen/register_activity_edittext_marginhorizontal"
        android:layout_marginTop="@dimen/register_activity_edittext_margintop"
        android:background="@drawable/rounded_edittext_bg"
        android:drawableStart="@drawable/mobile_number_icon"
        android:drawablePadding="@dimen/register_activity_drawable_padding"
        android:drawableTint="@color/icon_grey"
        android:hint="@string/enter_mobile_number"
        android:maxLength="10"
        android:padding="@dimen/register_activity_edittext_padding"
        android:inputType="number"
        android:textColor="@color/black"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnFpwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/etEmailpwd"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="40dp"
        android:background="@color/general_button_color"
        android:hint="@string/next_fpwd"
        android:textColorHint="@color/white"
        android:textSize="20sp" />

</RelativeLayout>